--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.20",
     "puppeteer": "^24.9.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
