--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lottie-react": "^2.4.1",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.20",
